PPJ/polinomi/e/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Naredba '\n' Program
    2        | Naredba '\n'

    3 Naredba: polinom
    4        | id_token ':' '=' polinom
    5        | polinom '=' '=' polinom
    6        | polinom '!' '=' polinom
    7        | polinom '[' br_token ']'

    8 polinom: '<' NizKoeficijenata '>'
    9        | polinom '+' polinom
   10        | polinom '-' polinom
   11        | polinom '*' polinom
   12        | '-' polinom
   13        | '(' polinom ')'
   14        | polinom '\''
   15        | '$' polinom '|' br_token
   16        | id_token

   17 NizKoeficijenata: NizKoeficijenata ',' br_token
   18                 | br_token


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '!' (33) 6
    '$' (36) 15
    '\'' (39) 14
    '(' (40) 13
    ')' (41) 13
    '*' (42) 11
    '+' (43) 9
    ',' (44) 17
    '-' (45) 10 12
    ':' (58) 4
    '<' (60) 8
    '=' (61) 4 5 6
    '>' (62) 8
    '[' (91) 7
    ']' (93) 7
    '|' (124) 15
    error (256)
    br_token <d_vrednost> (258) 7 15 17 18
    id_token <s> (259) 4 16
    UNMIN (260)


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    Program (24)
        on left: 1 2
        on right: 0 1
    Naredba (25)
        on left: 3 4 5 6 7
        on right: 1 2
    polinom <p_vrednost> (26)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 3 4 5 6 7 9 10 11 12 13 14 15
    NizKoeficijenata <p_vrednost> (27)
        on left: 17 18
        on right: 8 17


State 0

    0 $accept: . Program $end

    id_token  shift, and go to state 1
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    Program  go to state 6
    Naredba  go to state 7
    polinom  go to state 8


State 1

    4 Naredba: id_token . ':' '=' polinom
   16 polinom: id_token .

    ':'  shift, and go to state 9

    $default  reduce using rule 16 (polinom)


State 2

   12 polinom: '-' . polinom

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 11


State 3

    8 polinom: '<' . NizKoeficijenata '>'

    br_token  shift, and go to state 12

    NizKoeficijenata  go to state 13


State 4

   13 polinom: '(' . polinom ')'

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 14


State 5

   15 polinom: '$' . polinom '|' br_token

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 15


State 6

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 7

    1 Program: Naredba . '\n' Program
    2        | Naredba . '\n'

    '\n'  shift, and go to state 17


State 8

    3 Naredba: polinom .
    5        | polinom . '=' '=' polinom
    6        | polinom . '!' '=' polinom
    7        | polinom . '[' br_token ']'
    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   14        | polinom . '\''

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '\''  shift, and go to state 21
    '='   shift, and go to state 22
    '!'   shift, and go to state 23
    '['   shift, and go to state 24

    $default  reduce using rule 3 (Naredba)


State 9

    4 Naredba: id_token ':' . '=' polinom

    '='  shift, and go to state 25


State 10

   16 polinom: id_token .

    $default  reduce using rule 16 (polinom)


State 11

    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   12        | '-' polinom .
   14        | polinom . '\''

    '\''  shift, and go to state 21

    $default  reduce using rule 12 (polinom)


State 12

   18 NizKoeficijenata: br_token .

    $default  reduce using rule 18 (NizKoeficijenata)


State 13

    8 polinom: '<' NizKoeficijenata . '>'
   17 NizKoeficijenata: NizKoeficijenata . ',' br_token

    '>'  shift, and go to state 26
    ','  shift, and go to state 27


State 14

    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   13        | '(' polinom . ')'
   14        | polinom . '\''

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '\''  shift, and go to state 21
    ')'   shift, and go to state 28


State 15

    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   14        | polinom . '\''
   15        | '$' polinom . '|' br_token

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '\''  shift, and go to state 21
    '|'   shift, and go to state 29


State 16

    0 $accept: Program $end .

    $default  accept


State 17

    1 Program: Naredba '\n' . Program
    2        | Naredba '\n' .

    id_token  shift, and go to state 1
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    $default  reduce using rule 2 (Program)

    Program  go to state 30
    Naredba  go to state 7
    polinom  go to state 8


State 18

    9 polinom: polinom '+' . polinom

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 31


State 19

   10 polinom: polinom '-' . polinom

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 32


State 20

   11 polinom: polinom '*' . polinom

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 33


State 21

   14 polinom: polinom '\'' .

    $default  reduce using rule 14 (polinom)


State 22

    5 Naredba: polinom '=' . '=' polinom

    '='  shift, and go to state 34


State 23

    6 Naredba: polinom '!' . '=' polinom

    '='  shift, and go to state 35


State 24

    7 Naredba: polinom '[' . br_token ']'

    br_token  shift, and go to state 36


State 25

    4 Naredba: id_token ':' '=' . polinom

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 37


State 26

    8 polinom: '<' NizKoeficijenata '>' .

    $default  reduce using rule 8 (polinom)


State 27

   17 NizKoeficijenata: NizKoeficijenata ',' . br_token

    br_token  shift, and go to state 38


State 28

   13 polinom: '(' polinom ')' .

    $default  reduce using rule 13 (polinom)


State 29

   15 polinom: '$' polinom '|' . br_token

    br_token  shift, and go to state 39


State 30

    1 Program: Naredba '\n' Program .

    $default  reduce using rule 1 (Program)


State 31

    9 polinom: polinom . '+' polinom
    9        | polinom '+' polinom .
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   14        | polinom . '\''

    '*'   shift, and go to state 20
    '\''  shift, and go to state 21

    $default  reduce using rule 9 (polinom)


State 32

    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   10        | polinom '-' polinom .
   11        | polinom . '*' polinom
   14        | polinom . '\''

    '*'   shift, and go to state 20
    '\''  shift, and go to state 21

    $default  reduce using rule 10 (polinom)


State 33

    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   11        | polinom '*' polinom .
   14        | polinom . '\''

    '\''  shift, and go to state 21

    $default  reduce using rule 11 (polinom)


State 34

    5 Naredba: polinom '=' '=' . polinom

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 40


State 35

    6 Naredba: polinom '!' '=' . polinom

    id_token  shift, and go to state 10
    '-'       shift, and go to state 2
    '<'       shift, and go to state 3
    '('       shift, and go to state 4
    '$'       shift, and go to state 5

    polinom  go to state 41


State 36

    7 Naredba: polinom '[' br_token . ']'

    ']'  shift, and go to state 42


State 37

    4 Naredba: id_token ':' '=' polinom .
    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   14        | polinom . '\''

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '\''  shift, and go to state 21

    $default  reduce using rule 4 (Naredba)


State 38

   17 NizKoeficijenata: NizKoeficijenata ',' br_token .

    $default  reduce using rule 17 (NizKoeficijenata)


State 39

   15 polinom: '$' polinom '|' br_token .

    $default  reduce using rule 15 (polinom)


State 40

    5 Naredba: polinom '=' '=' polinom .
    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   14        | polinom . '\''

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '\''  shift, and go to state 21

    $default  reduce using rule 5 (Naredba)


State 41

    6 Naredba: polinom '!' '=' polinom .
    9 polinom: polinom . '+' polinom
   10        | polinom . '-' polinom
   11        | polinom . '*' polinom
   14        | polinom . '\''

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '\''  shift, and go to state 21

    $default  reduce using rule 6 (Naredba)


State 42

    7 Naredba: polinom '[' br_token ']' .

    $default  reduce using rule 7 (Naredba)
